<?xml version="1.0" encoding="utf-8"?>

    <android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true"
        android:background="@color/colorWhite"
        tools:context=".activity.Home">

        <android.support.design.widget.AppBarLayout

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/AppTheme.AppBarOverlay">

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar_nve"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="?attr/colorPrimary"
                app:popupTheme="@style/AppTheme.PopupOverlay" />

        </android.support.design.widget.AppBarLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:layout_marginTop="80dp"
            tools:context=".activity.About"
                >
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:id="@+id/text_about_1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/desc1"/>
                <ImageView
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:src="@drawable/fongwama"
                    android:layout_below="@id/text_about_1"
                    android:layout_width="wrap_content"
                    android:id="@+id/image_about"
                    android:layout_height="wrap_content" />
                <TextView
                    android:layout_below="@id/image_about"
                    android:layout_width="match_parent"
                    android:id="@+id/text3"
                    android:layout_height="wrap_content"
                    android:text="@string/desc2"/>
                <TextView

                    android:layout_below="@id/text3"
                    android:layout_width="match_parent"
                    android:textStyle="italic"
                    android:id="@+id/text4"
                    android:layout_height="wrap_content"
                    android:text="@string/desc4"/>
                <TextView

                    android:layout_below="@id/text4"
                    android:layout_width="match_parent"
                    android:textStyle="bold"
                    android:layout_height="wrap_content"
                    android:text="@string/desc5"/>

            </RelativeLayout>

        </ScrollView>
</android.support.design.widget.CoordinatorLayout>

